<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white"
    tools:context=".view.activity.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            style="@android:style/Widget.ProgressBar.Small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vote_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vote_average"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vote_average_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/vote_average"
            app:layout_constraintTop_toBottomOf="@id/vote_average" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vote_average_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/release_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/release_date"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/runtime_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/runtime"
            app:layout_constraintTop_toBottomOf="@id/runtime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runtime_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/budget_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/budget"
            app:layout_constraintTop_toBottomOf="@id/budget" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/revenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/revenue"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budget_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/revenue_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/revenue"
            app:layout_constraintTop_toBottomOf="@id/revenue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>